# requiem-manager

./: AUTHORS  HACKING.README  Makefile.am  README  configure.in  requiem-manager.conf.in
docs/api/: Makefile.am  requiem-manager-docs.sgml  requiem-manager-sections.txt
docs/manpages/: Makefile.am  requiem-manager.1
libmissing/: ftw.c  ftw_.h  strsep.c  vsnprintf.c
libmissing/glthread/: cond.c  cond.h
m4/: librequiem.m4  librequiemdb.m4
plugins/: Makefile.am
plugins/decodes/normalize/: Makefile.am  normalize.c
plugins/filters/idmef-criteria/: Makefile.am  idmef-criteria.c
plugins/filters/skeleton/: Makefile.am  skeleton.c
plugins/filters/thresholding/: Makefile.am  thresholding.c
plugins/reports/db/: Makefile.am  db.c
plugins/reports/debug/: Makefile.am  debug.c
plugins/reports/relaying/: Makefile.am  relaying.c
plugins/reports/smtp/: Makefile.am  smtp.c
plugins/reports/textmod/: Makefile.am  textmod.c
plugins/reports/xmlmod/: Makefile.am  xmlmod.c
src/: Makefile.am  bufpool.c  decode-plugins.c  filter-plugins.c  idmef-message-scheduler.c  manager-auth.c  manager-options.c  pmsg-to-idmef.c  report-plugins.c  requiem-manager.c  reverse-relaying.c  sensor-server.c  server-generic.c
src/include/: Makefile.am  bufpool.h  decode-plugins.h  filter-plugins.h  idmef-message-scheduler.h  manager-auth.h  manager-options.h  pmsg-to-idmef.h  report-plugins.h  requiem-manager.h  reverse-relaying.h  sensor-server.h  server-generic.h
