includedir = $(prefix)/include/requiem-manager


noinst_HEADERS = 			\
	bufpool.h			\
	decode-plugins.h		\
	filter-plugins.h		\
        idmef-message-scheduler.h 	\
        manager-auth.h 			\
        manager-options.h 		\
        pmsg-to-idmef.h 		\
	report-plugins.h		\
        reverse-relaying.h 		\
        server-generic.h 		\
        sensor-server.h                        

include_HEADERS = 		\
	requiem-manager.h

-include $(top_srcdir)/git.mk
